# genai-observability-suite

./: README.md  README.txt
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml  security.yaml
alerting/: README.md  prometheus-rules.yaml
dashboards/: cost-budgets.json  llm-backend.json  rag-overview.json
deploy/docker/: README.md  alertmanager.yaml  docker-compose.yaml  grafana-dashboards.yaml  grafana-datasources.yaml  loki-config.yaml  otel-collector-config.yaml  prometheus.yaml  tempo-config.yaml
deploy/helm/: Chart.yaml  README.md  values.yaml
docs/: semantic-conventions.md
docs/guides/: integration.md  quickstart.md
examples/python-rag-pipeline/: README.md  app.py  requirements.txt
sdk/nodejs/: README.md  package.json  tsconfig.json
sdk/nodejs/src/: config.ts  cost.ts  index.ts  instrumentation.ts  redaction.ts
sdk/python/: README.md  pyproject.toml
sdk/python/genai_otel/: __init__.py  config.py  cost.py  instrumentation.py  redaction.py
